--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "SvelteComponent",
+  "name": "SvelteWebComponent",
   "svelte": "src/index.svelte",
   "module": "index.mjs",
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
+    "build:dev": "rollup -c --environment BUILD:development",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "rollup": "^1.11.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.0",
-    "svelte": "^3.0.0"
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.12.1"
   },
   "keywords": [
-    "svelte"
+    "svelte",
+    "web-component"
   ],
   "files": [
     "src",
