--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^6.0.0",
     "rollup": "^1.11.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-svelte": "^5.0.0",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.12.1"
